--- a/app/views/accounts/bots/_form.html.erb
+++ b/app/views/accounts/bots/_form.html.erb
@@ -1,5 +1,5 @@
 <h1 class="for-screen-reader">Chat Bot Setup</h1>
-<label class="align-center center avatar__form gap" data-controller="upload-preview">
+<label class="align-center center avatar__form gap mobile-wrap" data-controller="upload-preview">
   <div class="btn input--file">
     <%= image_tag "camera.svg", aria: { hidden: "true" }, size: 20 %>
     <%= form.file_field :avatar, class: "input", accept: "image/*",
@@ -12,18 +12,18 @@
   </div>
 </label>
 
-<div class="flex align-center gap">
+<div class="flex align-center gap mobile-stack mobile-align-start">
   <%= translation_button(:bot_name) %>
-  <label class="flex align-center gap flex-item-grow txt-large input input--actor">
+  <label class="flex align-center gap flex-item-grow txt-large input input--actor mobile-full-width">
     <%= form.text_field :name, class: "input", autocomplete: "name", placeholder: "Name the bot", autofocus: true, required: true,
           data: { "1p-ignore": true } %>
     <%= image_tag "bot.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
   </label>
 </div>
 
-<div class="flex align-center gap">
+<div class="flex align-center gap mobile-stack mobile-align-start">
   <%= translation_button(:webhook_url) %>
-  <label class="flex align-center gap flex-item-grow txt-large input input--actor">
+  <label class="flex align-center gap flex-item-grow txt-large input input--actor mobile-full-width">
     <%= form.url_field :webhook_url, class: "input", placeholder: "Webhook URL" %>
     <%= image_tag "web.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
   </label>
