--- a/app/views/accounts/bots/edit.html.erb
+++ b/app/views/accounts/bots/edit.html.erb
@@ -13,14 +13,14 @@
 
   <hr class="separator full-width margin-block-double">
 
-  <div class="flex align-center gap justify-space-between">
-    <%= button_to account_bot_path(@bot), method: :delete, class: "btn txt--small btn--negative", aria: { label: "Delete this chat bot" },
+  <div class="flex align-center gap justify-space-between mobile-stack mobile-align-start">
+    <%= button_to account_bot_path(@bot), method: :delete, class: "btn txt-small btn--negative mobile-full-width", aria: { label: "Delete this chat bot" },
           data: { turbo_confirm: "Are you sure you want to permanently remove this bot from the account? This can’t be undone." } do %>
       <%= image_tag "trash.svg", aria: { hidden: "true" }, size: 20 %>
       <%= image_tag "bot.svg", aria: { hidden: "true" }, size: 20 %>
     <% end %>
 
-    <%= button_to account_bot_key_path(@bot), method: :put, class: "btn full-width txt--small btn--negative", aria: { label: "Generate a new key" },
+    <%= button_to account_bot_key_path(@bot), method: :put, class: "btn full-width txt-small btn--negative mobile-full-width", aria: { label: "Generate a new key" },
           data: { turbo_confirm: "Are you sure you want to change the bot key? All usage of this bot must be updated." } do %>
       <%= image_tag "refresh.svg", aria: { hidden: "true" }, size: 20 %>
       <%= image_tag "key.svg", aria: { hidden: "true" }, size: 20 %>
