--- a/app/views/accounts/bots/index.html.erb
+++ b/app/views/accounts/bots/index.html.erb
@@ -7,7 +7,7 @@
 <% end %>
 
 <section class="panel panel--wide txt-align-center flex flex-column position-relative" style="view-transition-name: chat-bots">
-  <div class="flex align-center gap">
+  <div class="flex align-center gap mobile-stack">
     <div class="panel__button">
       <%= translation_button(:chat_bots) %>
     </div>
