--- a/app/views/accounts/custom_styles/edit.html.erb
+++ b/app/views/accounts/custom_styles/edit.html.erb
@@ -22,8 +22,8 @@
       </p>
     </div>
 
-    <label class="flex align-start gap flex-item-grow">
-      <%= form.text_area :custom_styles, class: "input input--code txt--small", placeholder: "Add CSS styles…",
+    <label class="flex align-start gap flex-item-grow mobile-full-width">
+      <%= form.text_area :custom_styles, class: "input input--code txt-small", placeholder: "Add CSS styles…",
             autocomplete: "off", spellcheck: "false", autocorrect: "off", autocapitalize: "off",
             rows: 16, required: false %>
     </label>
