--- a/app/assets/stylesheets/boosts.css
+++ b/app/assets/stylesheets/boosts.css
@@ -1,12 +1,16 @@
 /* Container */
 .boosts {
   --boost-border-color: var(--color-border-dark);
+
+  max-inline-size: 100%;
+  min-inline-size: 0;
 }
 
 /* Item */
 .boost {
   border: 1px solid var(--boost-border-color);
   border-radius: 4rem;
+  max-inline-size: 100%;
   margin-block-start: calc(var(--block-space-half) / 2);
   opacity: 1;
   padding: 0.1em 0.2em 0.1em 0.1em;
@@ -65,6 +69,7 @@
 
 .boost__form {
   transition: none;
+  min-inline-size: 0;
 
   &.expanded {
     animation: boost 0.2s both;
@@ -84,7 +89,7 @@
 
     box-shadow: none;
     display: inherit;
-    max-inline-size: 16ch;
+    max-inline-size: min(16ch, 100%);
     min-inline-size: 2em;
     outline: 0;
   }
