--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -9,11 +9,14 @@
   box-shadow: 0 0 1em oklch(var(--lch-black) / 0.2);
   margin-block-end: var(--block-space);
   margin-block-start: 18ex;
+  margin-inline: auto;
+  max-inline-size: calc(100dvw - (var(--inline-space) * 2));
   overflow: unset;
   padding: var(--nametag-padding);
 
   @media (max-width: 100ch) {
     --nametag-padding: calc(var(--block-space) * 1.5);
+    margin-block-start: max(12ex, calc(var(--navbar-height) + var(--block-space)));
   }
 }
 
@@ -24,8 +27,8 @@
   background-color: var(--color-bg);
   border-radius: 0.8em;
   border: var(--nametag-border-size) solid var(--fieldset-border-color);
-  inline-size: 42ch;
-  max-inline-size: calc(100dvw - var(--nametag-padding) - var(--nametag-inner-padding) - (var(--nametag-border-size) * 6) - var(--inline-space) * 2);
+  inline-size: min(42ch, 100%);
+  max-inline-size: 100%;
   padding: var(--nametag-inner-padding);
 
   legend {
@@ -37,6 +40,7 @@
   block-size: auto;
   display: block;
   inline-size: 20ex;
+  max-inline-size: min(20ex, 50vw);
   inset-block-start: -4.5ex;
   position: absolute;
 }
@@ -49,7 +53,8 @@
 }
 
 .browser {
-  flex-basis: 20%;
+  flex: 1 1 10ch;
+  max-inline-size: 12ch;
 }
 
 .signup {
