--- a/app/views/accounts/bots/_bot.html.erb
+++ b/app/views/accounts/bots/_bot.html.erb
@@ -1,6 +1,6 @@
-<li class="flex flex-column gap flush fill-shade border-radius pad-block pad-inline-double">
-  <div class="flex align-center gap">
-    <figure class="avatar flex-item--no-shrink" style="--avatar-size: 2.65em;">
+<li class="flex flex-column gap margin-none fill-shade border-radius pad-block pad-inline-double">
+  <div class="flex align-center gap mobile-wrap">
+    <figure class="avatar flex-item-no-shrink" style="--avatar-size: 2.65em;">
       <%= avatar_tag bot, loading: :lazy %>
     </figure>
 
@@ -21,14 +21,14 @@
       </legend>
 
       <% curl_text_line = "curl -d 'Hello!' #{room_bot_messages_url(room, bot.bot_key)}" %>
-      <div class="flex align-center gap">
+      <div class="flex align-center gap mobile-stack mobile-align-start">
         <%= image_tag "messages-outlined.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
 
-        <div class="flex-item-grow">
-          <input type="text" class="input full-width fill-white" value="<%= curl_text_line %>" aria-label="curl command for posting messages" readonly>
+        <div class="flex-item-grow min-width mobile-full-width">
+          <input type="text" class="input full-width fill-white input--code" value="<%= curl_text_line %>" aria-label="curl command for posting messages" readonly>
         </div>
 
-        <div class="txt-small">
+        <div class="txt-small mobile-full-width txt-align-end">
           <%= button_to_copy_to_clipboard(curl_text_line) do %>
             <%= image_tag "copy-paste.svg", aria: { hidden: "true" }, size: 20 %>
             <span class="for-screen-reader">Copy message command</span>
@@ -37,14 +37,14 @@
       </div>
 
       <% curl_upload_line = %[curl -F "attachment=@/path/to/file" #{room_bot_messages_url(room, bot.bot_key)}] %>
-      <div class="flex align-center gap">
+      <div class="flex align-center gap mobile-stack mobile-align-start">
         <%= image_tag "attachment.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
 
-        <div class="flex-item-grow">
-          <input type="text" class="input full-width fill-white" value="<%= curl_upload_line %>" aria-label="curl command for posting attachments" readonly>
+        <div class="flex-item-grow min-width mobile-full-width">
+          <input type="text" class="input full-width fill-white input--code" value="<%= curl_upload_line %>" aria-label="curl command for posting attachments" readonly>
         </div>
 
-        <div class="txt-small">
+        <div class="txt-small mobile-full-width txt-align-end">
           <%= button_to_copy_to_clipboard(curl_upload_line) do %>
             <%= image_tag "copy-paste.svg", aria: { hidden: "true" }, size: 20 %>
             <span class="for-screen-reader">Copy attachment command</span>
