--- a/app/views/messages/boosts/new.html.erb
+++ b/app/views/messages/boosts/new.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag dom_id(@message, :new_boost) do %>
-  <div class="boost flex-inline postion--relative max-width fill-white" style="--column-gap: var(--inline-space-half)">
+  <div class="boost flex-inline position-relative max-width fill-white" style="--column-gap: var(--inline-space-half)">
     <%= form_with model: [ @message, Boost.new ], class: "boost__form flex align-center gap expanded",
           data: { controller: "form scroll-into-view", turbo_frame: dom_id(@message, :boosting), action: "keydown.esc->form#cancel" } do |form| %>
       <label class="boost__form-label flex gap" style="--column-gap: 0.7ch;" role="button" tabindex="0" aria-label="Add a boost">
