--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%= form_with model: @user, url: join_path(params[:join_code]), class: "center" do |form| %>
-  <section class="nametag u-relative">
+  <section class="nametag position-relative">
     <div class="flex justify-center align-center pad-block">
       <%= image_tag "lanyard.svg", class: "nametag__lanyard", aria: { hidden: "true" } %>
     </div>
@@ -38,26 +38,26 @@
         </label>
       </fieldset>
 
-      <div class="flex align-center gap">
+      <div class="flex align-center gap mobile-stack mobile-align-start">
         <%= translation_button(:user_name) %>
-        <label class="flex align-center gap flex-item-grow txt-large input input--actor">
+        <label class="flex align-center gap flex-item-grow txt-large input input--actor mobile-full-width">
           <%= form.text_field :name, class: "input", autocomplete: "name", placeholder: "Name", autofocus: true, required: true,
                 data: { "1p-ignore": true } %>
           <%= image_tag "person.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
         </label>
       </div>
 
-      <div class="flex align-center gap">
+      <div class="flex align-center gap mobile-stack mobile-align-start">
         <%= translation_button(:email_address) %>
-        <label class="flex align-center gap flex-item-grow txt-large input input--actor">
+        <label class="flex align-center gap flex-item-grow txt-large input input--actor mobile-full-width">
           <%= form.email_field :email_address, class: "input", autocomplete: "username", placeholder: "Email address", required: true %>
           <%= image_tag "email.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
         </label>
       </div>
 
-      <div class="flex align-center gap">
+      <div class="flex align-center gap mobile-stack mobile-align-start">
         <%= translation_button(:password) %>
-        <label class="flex align-center gap flex-item-grow txt-large input input--actor">
+        <label class="flex align-center gap flex-item-grow txt-large input input--actor mobile-full-width">
           <%= form.password_field :password, class: "input", autocomplete: "new-password", placeholder: "Password", required: true, maxlength: 72 %>
           <%= image_tag "password.svg", aria: { hidden: "true" }, size: 24, class: "colorize--black" %>
         </label>
